# stepik-fast-course-fast-api

./: README.md  mypy.ini  pyproject.toml  ruff.toml
src/lesson_1/: main.py
src/lesson_1/public/: bye.html
src/lesson_1/types_def/: __init__.py  types_def.py
src/lesson_2_1/: main.py
src/lesson_2_1/types_def/: __init__.py  types_def.py
src/lesson_2_2/: main.py
src/lesson_2_2/services/: cookie_service.py
src/lesson_2_2/types_def/: __init__.py  types_def.py
