[project.urls]
Homepage = "https://github.com/AzhPistacius/stepik-fast-course-fast-api"
Documentation = "https://github.com/AzhPistacius/stepik-fast-course-fast-api"
Repository = "https://github.com/AzhPistacius/stepik-fast-course-fast-api"
Issues = "https://github.com/AzhPistacius/stepik-fast-course-fast-api/issues"

[project]
name = "stepik-fast-course-fast-api" 
version = "0.0.1"
description = "template"
authors = [
    { name = "Artem Azhdaryan" }
]
readme = "README.md"
requires-python = ">=3.12"

# Основные зависимости
dependencies = [
]

[project.optional-dependencies]
# Основные инструменты разработки
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0", 
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "pre-commit>=3.8.0",
]

# Линтеры и форматеры
lint = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

# ML зависимости
ml = [
]

# Документация
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
